syntax = "proto3";

package auth;

option go_package = "../pb;auth";

message SignupRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message SignupResponse {
  string userId = 1;
}
